Regression: Right click in the attribute name field crashes blender #100527

Closed
opened 2022-08-20 19:57:07 +02:00 by Iliya Katushenock · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.4.0, 3.3-beta
Caused by fec2543648

Short description of error
If there are several nodes, then clicking does not open the menu, but crashes the program

Steps to Reproduce

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.4.0, 3.3-beta Caused by fec2543648 **Short description of error** If there are several nodes, then clicking does not open the menu, but crashes the program **Steps to Reproduce** - Open .blend file - Right click on name field of second `Store Named Attribute` node [#100527.blend](https://archive.blender.org/developer/F13410679/T100527.blend) [2022-08-20 20-54-06.mp4](https://archive.blender.org/developer/F13408403/2022-08-20_20-54-06.mp4)
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Author
Member

Not reproducible in 3.3, regression

Not reproducible in 3.3, regression
Iliya Katushenock changed title from Geometry Node UI: Right click in the attribute name field crashes the program to Geometry Node UI: Right click in the attribute name field crashes blender 2022-08-20 20:05:03 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

git bisect points me to: fec2543648
@mont29 ^

git bisect points me to: fec2543648 @mont29 ^
Pratik Borhade changed title from Geometry Node UI: Right click in the attribute name field crashes blender to Regression: Right click in the attribute name field crashes blender 2022-08-22 08:09:10 +02:00

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

@JulianEisel the propblem here is that the call to UI_context_active_but_prop_get_templateID does absolutely no check on the fact that the 'context button' is actually an ID template one... and ends up accessing something else than expected TemplateID data as but->func_argN. I do not see a way to do so currently. Only idea I have to fix this would be to have a dedicated flag/sub-type in buttons where you can store that kind of information. :/

@JulianEisel the propblem here is that the call to `UI_context_active_but_prop_get_templateID` does absolutely no check on the fact that the 'context button' is actually an ID template one... and ends up accessing something else than expected `TemplateID` data as `but->func_argN`. I do not see a way to do so currently. Only idea I have to fix this would be to have a dedicated flag/sub-type in buttons where you can store that kind of information. :/

This issue was referenced by c973d333da

This issue was referenced by c973d333da31c139c69943f743a2f342be610cce

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-08-22 12:15:59 +02:00
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100527
No description provided.